--- a/painel.html
+++ b/painel.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>Painel RC Locações</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      padding: 20px;
+    }
+    #painel {
+      display: none;
+      margin-top: 20px;
+    }
+  </style>
 </head>
-<body style="font-family: sans-serif; padding: 20px;">
-  <h2>Painel RC Locações</h2>
-
+<body>
+  <h2>Login - RC Locações</h2>
   <form id="formLogin">
-    <label>Usuário: </label><input type="text" id="usuario" /><br/>
-    <label>Senha: </label><input type="password" id="senha" /><br/><br/>
+    <label for="usuario">Usuário:</label>
+    <input type="text" id="usuario"><br><br>
+    <label for="senha">Senha:</label>
+    <input type="password" id="senha"><br><br>
     <button type="submit">Entrar</button>
   </form>
 
-  <div id="painel" style="display: none; margin-top: 20px;">
-    <h3>Bem-vindo ao painel</h3>
-
+  <div id="painel">
+    <h3>Bem-vindo ao painel RC Locações</h3>
     <button onclick="verificarWhatsapp()">Conectar WhatsApp</button>
     <div id="statusWhatsapp" style="margin-top:10px;"></div>
     <div id="qrcodeWhatsapp" style="margin-top:10px;"></div>
@@ -31,7 +40,6 @@
       const user = document.getElementById('usuario').value;
       const pass = document.getElementById('senha').value;
 
-      // Login simples só para visual
       if (user === "admin" && pass === "rclocacoes2024") {
         form.style.display = 'none';
         painel.style.display = 'block';
