--- a/index.html
+++ b/index.html
@@ -1,14 +1,39 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
-    <title>RC Locações - Login</title>
+  <meta charset="UTF-8">
+  <title>Página de Login - RC Locações</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Login RC Locações</h2>
-    <form action="/painel.html">
-        <input type="text" placeholder="Usuário" required><br>
-        <input type="password" placeholder="Senha" required><br>
+  <div class="login-container">
+    <div class="login-box">
+      <h1>RC Locações</h1>
+      <form id="formLogin">
+        <label for="usuario">Usuário:</label>
+        <input type="text" id="usuario"><br><br>
+        <label for="senha">Senha:</label>
+        <input type="password" id="senha"><br><br>
         <button type="submit">Entrar</button>
-    </form>
+      </form>
+    </div>
+  </div>
+
+  <script>
+    const form = document.getElementById('formLogin');
+
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
+      const user = document.getElementById('usuario').value;
+      const pass = document.getElementById('senha').value;
+
+      if (user === "admin" && pass === "rclocacoes2024") {
+        window.location.href = "painel.html";  // Redireciona para o painel
+      } else {
+        alert("Usuário ou senha inválidos.");
+      }
+    });
+  </script>
 </body>
 </html>
